# marvel-characters

./: databricks.yml  pyproject.toml
resources/: bundle_monitoring.yml  model_deployment.yml
scripts/: deploy_model.py  process_data.py  refresh_monitor.py  train_register_custom_model.py
src/marvel_characters/: config.py  data_processor.py  monitoring.py  utils.py
src/marvel_characters/models/: basic_model.py  custom_model.py
src/marvel_characters/serving/: model_serving.py
tests/: conftest.py
tests/marvel_characters/: test_data_processor.py
typings/: __builtins__.pyi
