[project]
name = "marvel-characters"
description = "Marvel characters project"
requires-python = ">=3.12, <3.13"
dependencies = [
    "cffi==1.17.1",
    "cloudpickle==3.1.1",
    "databricks-sdk==0.55.0",
    "lightgbm==4.6.0",
    "loguru==0.7.3",
    "mlflow==3.1.1",
    "numpy==1.26.4",
    "pandas==2.3.0",
    "pyarrow==17.0.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
]

dynamic = [
    'version',
]

[project.optional-dependencies]
dev = [
    "databricks-connect>=16.0, <17",
    "ipykernel>=6.29.5, <7",
    "pip>=25.0.1, <26",
    "pre-commit>=4.1.0, <5",
]

test = [
    "pre-commit>=4.1.0, <5",
    "pyspark>=3.4.0, <4",
    "pytest-cov>=5.0.0, <6",
    "pytest>=8.0.0, <9",
]

[build-system]
requires = [
    "setuptools>=72.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "house_price*",
    "marvel_characters*",
]

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
markers = [
    "ci_exclude: Tests excluded from CI/CD pipeline",
]
addopts = [
    "--cov-report=term",
    "--cov-report=xml:coverage.xml",
    "--cov=src",
]

[tool.ruff]
line-length = 120
lint.select = [
    "ANN", # flake8-annotations rules
    "B",   # flake8-bugbear rules
    "C",   # pylint convention rules
    "D",   # pydocstyle rules
    "E",   # pycodestyle error rules
    "ERA", # eradicate rules
    "F",   # pyflakes rules
    "I",   # isort rules
    "SIM", # flake8-simplify rules
    "UP",  # pyupgrade rules
    "W",   # pycodestyle warning rules
]
lint.ignore = [
    "C901",   # too complex
    "D100",   # missing docstring
    "D107",   # Missing docstring in `__init__`
    "D203",   # incorrect-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "E501",   # line-too-long
    "ERA001", # commented out code
    "ERA001", # commented out code
]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
